--- a/csgo-cheat.vcxproj
+++ b/csgo-cheat.vcxproj
@@ -156,7 +156,9 @@
     <ClInclude Include="core\menu\zgui\zgui.hpp" />
     <ClInclude Include="dependencies\common_includes.hpp" />
     <ClInclude Include="dependencies\interfaces\cglobalvarsbase.hpp" />
-    <ClInclude Include="dependencies\interfaces\glow_manager.hpp" />
+    <ClInclude Include="dependencies\interfaces\glow_manager.hpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClInclude>
     <ClInclude Include="dependencies\interfaces\iclientstate.hpp" />
     <ClInclude Include="dependencies\interfaces\iconsole.hpp" />
     <ClInclude Include="dependencies\interfaces\ibaseclientdll.hpp" />
